<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

    <!-- for buttons -->
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           
           <Button
               android:id="@+id/shuffleBtn"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:contentDescription="@string/shuffle_btn"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:drawableTop="@drawable/shuffle_icon"
               android:text="@string/shuffle_btn"
               android:textColor="@color/black"
               android:textAllCaps="false"/>

           <Button
               android:id="@+id/favouriteBtn"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:contentDescription="@string/favourites_btn"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:drawableTop="@drawable/favourite_icon"
               android:text="@string/favourites_btn"
               android:textColor="@color/black"
               android:textAllCaps="false"/>

           <Button
               android:id="@+id/playlistBtn"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:contentDescription="@string/playlist_btn"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:drawableTop="@drawable/playlist_icon"
               android:text="@string/playlist_btn"
               android:textColor="@color/black"
               android:textAllCaps="false"/>


       </LinearLayout>
       <TextView
           android:id="@+id/totalSongs"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/total_songs"
           android:textColor="@color/black"
           android:layout_margin="10dp"/>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/musicRV"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
           android:scrollbars="vertical" />


   </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>